1st personal correction

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -18,12 +18,12 @@ The announcement and release notes for this new release can be found here:
 Among the new major features (the list is huge):
 
 * A brand new GUI, more modern, fully redesigned and customizable via GTK+ CSS rules. There is no more size, color, fixed position in the Gtk C darktable code. This version already comes with several themes.
-* A new "culling" mode on the lighttable. It displays a fixed number of consecutive images starting from the first selected (or a set of selected images), and allows you to pan & zoom them. The number of displayed images can be set by the user, and they can be navigated with the mouse wheel and keyboard. Finally, it provides a comparison mode of images often requested.
-* A new timeline view, making it possible to select a date range to display related images
-* A quite extensive rewrite of the lighttable view (including the filmstrip in darkroom view) has been made to greatly improve the overall performance. The lighttable is now usable on 4K and 5K monitors. darktable 3.0 also brings many code optimizations for CPU and SSE paths.
+* A new *culling* mode on the lighttable. It displays a fixed number of consecutive images starting from the first selected (or a set of selected images), and allows you to pan & zoom them. The number of displayed images can be set by the user, and they can be navigated with the mouse wheel and keyboard. Finally, it provides a comparison mode of images often requested.
+* A new *timeline* view, making it possible to select a date range to display related images
+* A quite extensive rewrite of the lighttable view (including the *filmstrip* in darkroom view) has been made to greatly improve the overall performance. The lighttable is now usable on 4K and 5K monitors. darktable 3.0 also brings many code optimizations for CPU and SSE paths.
 * A new *filmic RGB* module which, like the previous module *filmic*, is designed to replace *base curve*, *shadows and highlights* and other global tone-mapping modules. This new version should be easier to use and it will reduce color casts. The old *filmic* module is now depreciated and only available on images where it was previously used.
 * A new module *tone equalizer* has been created to merge the features of *zone system*, *shadows and highlights*, and (local) *tone mapping* modules in a scene-referred RGB space. It brings an easy and safe way to remap tones locally, performing a quick zone-based dodging and burning using the [zone system](https://www.wikiwand.com/fr/Zone_system) of [Ansel Adams](https://www.wikiwand.com/fr/Ansel_Adams).
-* New modules *curve RGB* and *levels RGB*. They have modes for linked and independant RGB channels.
+* New modules *RGB curve* and *RGB levels*. They have modes for linked and independant RGB channels.
 * The module *denoise (profiled)* has been greatly improved. It now offers high-performance default settings in most cases. It is thus no longer necessary to use the two chroma and luma instances. In most cases only one instance is sufficient. For images processed with darktable 2.6 or earlier, it is possible to upgrade the module to the new processing algorithms via a checkbox in the module.
 * A new module *3D lut*, for handling 3D RGB Lut transformations (PNG Hald-CLUT and Cube files are supported).
 * A complete rework of the *tagging* module. It is now faster and more complete, with a new hierarchical view, possibility to set tags as private, to assign them to categories, or to even search synonyms.
@@ -99,12 +99,13 @@ These shortcuts are a good complement to this two shortcuts already present in d
 
 These shortcuts can be easily memorized by understanding this: the letters correspond to the 1st letter of the English term (top, left, right, bottom, histogram, navigation, filmstrip, header).
 
-And finally, valid in all darktable views: my favorite to use only once, after getting used on using the shortcuts above: `b`. With this simple letter, just say goodbye to borders with arrows. And darktable is getting lighter! Take a look at the screenshots below to see for yourself.
-On the image below, the applied shortcuts have been: `b`, `Shift+Ctrl+l`, `Shift+Ctrl+t`, `Shift+Ctrl+b` (for these last three ones, a quick tip: keep pressing `Shift+Ctrl` and then successively press `l`, `t` and `b` to hide the left, top and bottom panels) and `Ctrl+f` (for the image banner removed at the bottom). To replace the removed parts, simply repeat the same shortcuts.
+And finally, valid in all darktable views: my favorite to use only once, after getting used on using the shortcuts above: `b`. With this simple letter, just say goodbye to borders with arrows. And darktable is getting lighter!
+
+Take a look at the screenshot below to see for yourself. The applied shortcuts have been: `b`, `Shift+Ctrl+l`, `Shift+Ctrl+t`, `Shift+Ctrl+b` (for these last three ones, a quick tip: keep pressing `Shift+Ctrl` and then successively press `l`, `t` and `b` to hide the left, top and bottom panels) and `Ctrl+f` (for the image banner removed at the bottom). To replace the removed parts, simply repeat the same shortcuts.
 
 ![light version for image editing](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/cnlightwithoutborders.png)
 
-With all these shortcuts, you can display your darkroom view with the parts you want (with or without miniature, right or left panel, histogram or not...). Test, see what suits you best for your practice, depending on your need or when you want to alternate between the parts. It's simple and effective!
+With all these shortcuts, you can display your darkroom view (and each darktable view) with the parts you want (with or without miniature, right or left panel, histogram or not...). Test, see what suits you best for your practice, depending on your need or when you want to alternate between the parts. It's simple and effective!
 
 **_Search module field_**
 
@@ -125,8 +126,8 @@ A redesign of the history has been done. darktable, like any RAW developer softw
 As you can see below, new visual icons have appeared on the right. They indicate the status of the module (for the first three states, you will also find this same visual in the module panel on the right):
 
 - Default modules that cannot be disabled: *full round surrounded by a circle* (ex: *gamma*)
-- Modules in active state (that could be disable): on/off button enabled* (ex: *white balance*)
-- Modules in the state disabled (that could be enabled): on/off button disabled and the text of the module in light grey (ex: *base curve*)
+- Modules in active state (that could be disable): *on/off button enabled* (ex: *white balance*)
+- Modules in the state disabled (that could be enabled): *on/off button disabled* and *the text of the module in light grey* (ex: *base curve*)
 - Deprecated modules (recommended not to use them anymore): *cross* (ex: *filmic*). If enabled, white and light grey text and light grey if disabled.
 
 ![history](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/history.png)
@@ -141,7 +142,7 @@ It is possible to customize the data displayed in this area, in the darktable pr
 
 ![EXIF infos settings](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/prefsinfoimage.png)
 
-Possible parameters for the format can be found in darktable manual. Changing these options requires a restart of the application to be taken into account.
+Possible parameters for the format can be found in darktable manual. Changing these options requires a restart of the application to be applied.
 
 **_Second image preview window_**
 
@@ -155,7 +156,7 @@ This new window has its own color profile, which allows you to place it on anoth
 
 ### Accels window: viewing shortcuts in the active view
 
-At any time, whatever the active view of darktable, you can display the shortcuts that can be used in this view. This list of shortcuts is dynamic and includes both default shortcuts and your custom ones. To display it, nothing could be easier: press the letter `h` (then `Alt` if you want to leave this panel active) It is possible to separate it from the darktable window via the button that appears at the top right).
+At any time, whatever the active view of darktable, you can display the shortcuts that can be used in this view. This list of shortcuts is dynamic and includes both default shortcuts and your custom ones. To display it, nothing could be easier: press the letter `h` (then `Alt` if you want to leave this panel active). It is possible to separate it from the darktable window via the button that appears at the top right.
 
 ![accels window](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/shortcutshelp.png)
 
@@ -168,9 +169,10 @@ darktable 3.0 also offers a clearer arrangement of preferences. The options are 
 The lighttable is now more reactive. Many code optimizations have been performed to greatly improve usage and performance.
 
 The lighttable also sees the arrival of undo/redo functions via `Ctrl+Z` shortcut applicable to keywords, star rating, color labels, metadata modification, copy/paste or removal history or even style application.
+
 => Since this shortcut was initially assigned to the preview with focus detection, this last function can now be displayed via the shortcut `Ctrl+W`. For consistency, the preview previously displayed with `Z` is now displayed via the shortcut `W` or `Alt+W` (persistent preview).
 
-It is now possible to zoom on an image in preview mode. After launching the preview, use the shortcut `Ctrl+mouse wheel` to zoom in/out. However, in some smaller configurations, the new zoom capabilities may result in a waiting time to allow the zoomed image to be displayed. To speed up this display, it may be useful to run the following command in terminal mode (darktable must be closed, and remain closed, while executing this command):
+It is now possible to zoom and pan on an image in preview mode. After launching the preview, use the shortcut `Ctrl+mouse wheel` to zoom in/out. However, in some smaller configurations, the new zoom capabilities may result in a waiting time to allow the zoomed image to be displayed. To speed up this display, it may be useful to run the following command in terminal mode (darktable must be closed, and remain closed, while executing this command):
 
     darktable-generate-cache -m 6
 
@@ -180,7 +182,7 @@ It is possible to modify the number according to the desired zoom level (7 corre
 
 The lighttable gives until now two modes: *zoomable light table* and *file manager*. A third mode appears, and not the least: a *culling* mode. This mode displays a consecutive (or not) and fixed number of images from the selected one. It allows to zoom and pan on them. Images number can be fixed by the user, and it's possible to move on with mouse wheel and keyboard.
 
-Yes, you understand, one of the most frequently requested features of the lighttable is finally there: possibility to compare images. See now when it works !
+Yes, you understand, one of the most frequently requested features of the lighttable is finally there: possibility to compare images. See now how it works !
 
 Two options exist:
 
@@ -189,7 +191,7 @@ Two options exist:
 
 Of course, here, dynamic zoom will have same effect as fixed one if selected number is the one set on fixed zoom mode. In both cases, you can move on images of the actual collection simply with:
 
-- `Wheel mouse` (or keyboard `left and righ arrows`): to display previsous or next images.
+- `Wheel mouse` (or keyboard `left and righ arrows`): to display previous or next images.
 
 The number of images to be displayed and the mode option are set in the selection mode with settings on the right of the culling menu at the bottom of the lighttable:
 
@@ -230,10 +232,11 @@ You could see a preview of this timeline view on the four themes images in the b
 
 New modules appear, exclusively in RGB space. With darktable 3.0, you can edit your images entirely in RGB, with the modules that will be presented to you in this section: the vast majority of images can be processed exclusively with these modules, combined with the *white balance*, *exposure* and *denoise (profiled)* modules. A powerful and fast workflow, with fewer modules. In a word: efficient.
 
-=> For an optimal use of this new workflow, it is strongly recommended to activate, in the *input color profile* module, the **linear Rec2020 RGB** working profile (you could also use, if necessary, **linear prophoto RGB**).
+=> For an optimal use of this new workflow, it is strongly recommended to activate, in the *input color profile* module, the **linear Rec2020 RGB** working profile (you could also use **linear prophoto RGB**).
+
 => It is also strongly recommended in this context to disable *base curve* and  *sharpen* modules via the three new options of darktable *preferences*, tab *core options* then heading *quality*
 
-To understand this linear RGB workflow and why it is adopted in darktable, we recommend you to watch the following video: [Image processing and pixel pipeline in darktable 3.0](https://www.youtube.com/watch?v=3FFU-Ltvm0I). In general, taking the time to watch Aurélien Pierre's latest videos on this version 3.0 will help you to become more efficient in processing your images, allowing you to make the most of this new workflow and, ultimately, gradually save a lot of time.
+To understand this linear RGB workflow and why it is adopted in darktable, we recommend you to watch the following video: [Image processing and pixel pipeline in darktable 3.0](https://www.youtube.com/watch?v=3FFU-Ltvm0I). In general, taking the time to watch Aurélien Pierre's latest videos on this version 3.0 will help you to become more efficient in processing your images and make the most of this new workflow and, ultimately, gradually save a lot of time.
 
 However, a summary of this workflow and its benefits is provided below.
 
@@ -264,7 +267,7 @@ Two new chrominance preservation modes have been added in addition to the old on
 
 ### New *tone equalizer* module
 
-The *tone equalizer* takes the functionalities of *tone mapping* and *curves*, but adapts them to a logarithmic representation of brightness (in EV) in accordance with Ansel Adams *zone system*. Its function is simply to define a parametric exposure compensation, which varies according to the original brightness of the pixels. It is possible to fully reproduce the operation of the *tone equalizer* by using several instances of the *exposure* module merged in parametric mode and set to isolate different exposure levels. The *tone equalizer* only speeds up the process, and automates parts of it.
+The *tone equalizer* takes the functionalities of tone mapping and curves, but adapts them to a logarithmic representation of brightness (in EV) in accordance with Ansel Adams *zone system*. Its function is simply to define a parametric exposure compensation, which varies according to the original brightness of the pixels. It is possible to fully reproduce the operation of the *tone equalizer* by using several instances of the *exposure* module merged in parametric mode and set to isolate different exposure levels. The *tone equalizer* only speeds up the process, and automates parts of it.
 
 It offers an interface that allows you to quickly define a selective exposure compensation for each exposure band between 0 EV (white) and -8 EV (black), similar to the audio equalizers of hifi amplifiers. Exposure compensation performs content extraction by guided filter, allowing the same correction to be applied to continuous areas of the image, and thus to preserve local contrast (the logic is similar to the module *shadows and highlights* but the guided filter is designed to never produce halos on the contrasting edges). The *tone equalizer* therefore makes it possible to re-light the scene afterwards but in a physically realistic way, without affecting chrominance or creating halos, and therefore much more credible than traditional HDR mapping or shadow correction tools. 
 
@@ -272,11 +275,11 @@ It also innovates on user interaction, by offering an interactive cursor that al
 
 ![tone equalizer](https://raw.githubusercontent.com/Nilvus/dtorg/master/content/blog/2019-12-24-darktable-3.0/en/toneequalizer.png)
 
-The detail preservation mode (based on the guided filter) can be disabled, in which case the module behaves as a simple tone curve with a logarithmic interface and an algorithm that preserves the chrominance. The interpolation of the settings using a series of Gaussians, it will then be smoother than the interpolation by monotonic spline and less oscillating than the interpolation by cubic splines of *basic curve* and *tone curve* modules.
+The detail preservation mode (based on the guided filter) can be disabled, in which case the module behaves as a simple tone curve with a logarithmic interface and an algorithm that preserves the chrominance. The interpolation of the settings using a series of Gaussians, it will then be smoother than the interpolation by monotonic spline and less oscillating than the interpolation by cubic splines of *base curve* and *tone curve* modules.
 
 ### New *rgb curve* and *rgb levels* modules
 
-These two modules use the features of the old *levels* and *tone curves* (used in RGB mode), but work in the RGB space of the pipeline and use linear RGB fusion modes (note that the old modules merge in Lab). They also allow to manage RGB channels separately, and to use the same chrominance preservation logic as filmic in attached channels mode.
+These two modules use the features of the old *levels* and *tone curve* (used in RGB mode), but work in the RGB space of the pipeline and use linear RGB fusion modes (note that the old modules merge in Lab). They also allow to manage RGB channels separately, and to use the same chrominance preservation logic as filmic in attached channels mode.
 
 It is useful to note that the *RGB levels* module uses exactly the same algorithm as the *color balance* module in slope, offset, power mode: the black setting corresponds to the offset setting, the grey to the power, and the white to the slope. It is essentially the interface that changes, and the fact that *RGB levels* assume input values between 0% and 100% and pre-calculate a 16-bit LUT for the transformation to be applied (technique used 10 years ago to accelerate processing, less useful today), while *color balance* accepts values between 0 and infinity and directly calculates the exact pixel value.
 
