last personal correction

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -279,7 +279,7 @@ The detail preservation mode (based on the guided filter) can be disabled, in wh
 
 ### New *rgb curve* and *rgb levels* modules
 
-These two modules use the features of the old *levels* and *tone curve* (used in RGB mode), but work in the RGB space of the pipeline and use linear RGB fusion modes (note that the old modules merge in Lab). They also allow to manage RGB channels separately, and to use the same chrominance preservation logic as filmic in attached channels mode.
+These two modules use the features of the old *levels* and *tone curve* (used in RGB mode), but work in the RGB space of the pipeline and use linear RGB fusion modes (note that the old modules merge in Lab). They also allow to manage RGB channels separately, and to use the same chrominance preservation logic as *filmic* in attached channels mode.
 
 It is useful to note that the *RGB levels* module uses exactly the same algorithm as the *color balance* module in slope, offset, power mode: the black setting corresponds to the offset setting, the grey to the power, and the white to the slope. It is essentially the interface that changes, and the fact that *RGB levels* assume input values between 0% and 100% and pre-calculate a 16-bit LUT for the transformation to be applied (technique used 10 years ago to accelerate processing, less useful today), while *color balance* accepts values between 0 and infinity and directly calculates the exact pixel value.
 
@@ -350,7 +350,7 @@ For another user to be able to redo the processing, it will be necessary to prov
 - Compressed LUT files are compressed.png image files with routines proposed by G'Mic. Their size allows them to be included in the database and .xmp, so they can be retrieved and transmitted more easily to another user. 
 You can download [HaldClut.png files that simulate silver films](http://www.quelsolaar.com/technology/download.html) and [cube files](https://www.on1.com/free/luts/?fbclid=IwAR11-LyGrHDpeho_mrwUqKgPpFvgYeye-ed-auxF8nGzHoI0w35ZcESoX8Q)
 
-You will also find [the article in English](https://www.darktable.org/2019/05/New%20module-lut3d/), it also gives links to Lut files.
+You will also find [an article in English](https://www.darktable.org/2019/05/New%20module-lut3d/) which gives links to Lut files.
 
 **How to use *3D lut*:**
 
@@ -411,7 +411,7 @@ At the bottom of the window, the number of buttons has increased from two to fiv
 * `⥮` allows you to modify the classification of keywords in the window, either in alphabetical order or according to the number of images labelled.
 * `-` the latter finally displays the hierarchy of each keyword or just the terminal keyword.
 
-The middle entry field always allows you to search for keywords or create new ones. However, for the creation, it will be advantageous to use the new dedicated window, because it allows more things (see below). Finally, a cross button on the right allows you to delete the contents of the input field.
+The middle entry field always allows you to search for keywords or create new ones. However, for the creation, it will be advantageous to use the new dedicated window, because it allows more things (see below). Finally, a cross button on the right allows you to delete the content of the input field.
 
 The bottom window (keyword dictionary) always shows the list of available keywords. A big improvement again, this time it concerns readability: the keyword hierarchies are presented in tree form! In the same way as keywords in the collection filter module or hierarchical styles in the styles module are. As in the attached keyword window, on the left can appear one of the same small icons. Their meaning is as follows:
 
@@ -498,6 +498,7 @@ Then, to give a little pep to the shadows in the greens, I used the same mask in
 # Other improvements
 
 The image processing chain (pipeline) has been thoroughly reviewed and optimized. It is now possible to re-order the modules via a `Shift+Ctrl+Drag&Drop` of these modules in the darkroom or via the instance menu and the up/down options.
+
 **WARNING:** *It is VERY IMPORTANT TO UNDERSTAND that moving the modules changes the order in which they are processed, so it affects the rendering of the current image. The default order is safe and optimized for the majority of uses. It is recommended to move a module only if you know what you are doing and what effect it will have on your image. Under no circumstances should this change be used to "classify" these modules.
 
 The *color zones* module now displays a histogram based on the "select by" option. It is now possible to add and remove nodes to the curve, but these nodes can still be moved with the old size control by checking the edit by area box. There is also a new "pronounced" processing option and a new picker that allows you to create a curve based on the selected image area.
@@ -508,21 +509,21 @@ A new preference option allows you to develop or fold a darkroom module automati
 
 The original export to Picasa has been updated to Google Photos.
 
-darktable 3.0 also brings many bug fixes and some other minor improvements probably forgotten here due to this so rich new version in new features.
+darktable 3.0 also brings many bug fixes and some other minor improvements probably forgotten here due to this new version so rich in new features.
 
 # A 3.0.1 release already on its way
 
-Due to the important changes made by version 3.0, a feature freez was decided at the beginning of October and new text strings were frozen at the beginning of November. This allowed both time to fix as many bugs as possible and to translators the possibility to offer their translations for darktable 3.0 release on Christmas.
+Due to the important changes made by version 3.0, a feature freeze was decided at the beginning of October and new text strings were frozen at the beginning of November. This allowed both time to fix as many bugs as possible and to translators the possibility to offer their translations for darktable 3.0 release on Christmas.
 
-Thus, since then, new improvements have already been proposed or are under development. They should be published for 3.0.1, release expected in the first quarter of 2020. Here are some of the main new features expected for this 3.0.1:
+Thus, since then, new improvements have already been proposed or are under development. They should be published for 3.0.1, release expected in the first quarter of 2020. Here are some of the main new features expected for this future 3.0.1:
 
 - A metadata copying functionality between images (keywords, geolocation, notation, color labels...)
 - Added the possibility to search for several keywords in the collections search field, separated by a simple comma.
 - Different module optimizations: *tone equalizer*, *color zones*...
 - Adding a vibrance slider in *basic adjustments* module
-- A significant improvement in the transition from displaying a darkroom image, loaded from the light table (no more weird background display of a part of the light table before the full display of the darkroom image)
+- A significant improvement in the transition from displaying a darkroom image, loaded from lighttable (no more weird background display of a part of the lighttable before the full display of the darkroom image)
 - A focus peaking feature (with 3 display levels at the time of writing) that can be activated in both lighttable and darkroom views. This significantly improves the display of sharpness areas of an image, compared to the "focus detection rectangles" of the currently available lighttable view (this mode will remain available).
-- The possibility to resize directly and independently, with the mouse, the left and right panels. The size of each panel (left and right) will be stored for each view. It will therefore be possible to have a different size for each panel, and for each view.
+- The possibility to resize directly and independently, with the mouse, the left and right panels. The size of each panel (left and right) will be stored for each view. It will therefore be possible to have a different size for each side panel, and for each view.
 - The possible addition of a white frame around the image, in darkroom view, according to ISO 12646:2008 ICC recommendation. This allows you to visualize the rendering of an image, especially for use at the end of exposure. Be careful, this is a specific use, so the recommendation and practice requires a white frame. Any other colour would render the interest of this option obsolete.
 - More precise adjustment of dark tones for parametric masks (logarithmic mode)
 - Re-apply the last keyword to one or more images with a simple keyboard key
@@ -535,5 +536,4 @@ This list is not exhaustive and presents the main developments known to date.
 This article is licensed under the terms of the [Attribution 2.0 Generic (CC BY 2.0)](https://creativecommons.org/licenses/by/2.0/), or, at your option, the [Creative Commons BY-NC-SA 3.0 License](https://creativecommons.org/licenses/by-nc-sa/3.0/).
 
 **Article co-authored by:**
-[Nilvus](https://github.com/Nilvus), [aurelienpierre](https://aurelienpierre.com/), [rawfiner](https://www.youtube.com/channel/UCEz-0EYZTx03UdQszbL8xDA/videos), [jpg54](https://www.flickr.com/photos/113336874@N07/), [jpv](http://jpverrue.fr), Ro_G, [Matthieu Moy](https://matthieu-moy.fr/)
-And thanks to the readers/correctors who helps.
+[Nilvus](https://github.com/Nilvus), [aurelienpierre](https://aurelienpierre.com/), [rawfiner](https://www.youtube.com/channel/UCEz-0EYZTx03UdQszbL8xDA/videos), [jpg54](https://www.flickr.com/photos/113336874@N07/), [jpv](http://jpverrue.fr), Ro_G, [Matthieu Moy](https://matthieu-moy.fr/). And thanks to the readers/correctors who helps.
