Final valid release of the 3.0 article

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -29,7 +29,7 @@ Among the new major features (the list is huge):
 * A complete rework of the *tagging* module. It is now faster and more complete, with a new hierarchical view, possibility to set tags as private, to assign them to categories, or to even search synonyms.
 * Export module have now an option to select which metadata to export. 
 * A new module *basic adjustments*. It allows you to adjust the black level, exposure, highlight compression, contrast, middle grey, brightness and saturation. It also has an auto feature based on Rawtherapee’s auto levels that can work on the entire image or a user selected area.
-* A new *raster mask*, that allows to copy a parametric mask to other modules in the pixel-pipe.
+* A new *raster mask*, that allows to copy a mask to other modules in the pixel-pipe.
 * And many other minor (but useful) features. We will talk about some of them, in the last part of this article.
 
 As with every darktable major release, the database format changes, so **you can't go back to the previous version once you go to 3.0**: it's always advisable to make a backup of your database (~/.config/darktable/ directory) **before** the update.
@@ -482,7 +482,7 @@ Using this module allows you to quickly correct a photo that does not require to
 
 ### New *raster mask*
 
-Raster masks add a new mode that allows you to reuse a parametric mask from one module to another module. 
+Raster masks add a new mode that allows you to reuse a mask from one module to another module. 
 
 **Warning:** *The raster mask can only take a mask from a module preceding it in the processing chain. It is also important to be careful not to move a module using a raster mask before the module of the original mask. This can currently lead to undesirable effects (in the worst case, a darktable crash).*
 
