Prepare for release

--- a/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
+++ b/content/blog/2019-12-24-darktable-3.0/2019-12-24-darktable-3.0.md
@@ -2,7 +2,7 @@ title: darktable 3.0
 author: Nilvus
 slug: darktable-30
 date: 2019-12-24
-lede: darktable3.0.jpg
+lede: vulture.jpg
 lede_author: <a href="https://https://github.com/Nilvus/darktable/">Nilvus</a>
 tags: announcement, darktable-release
 
@@ -478,7 +478,69 @@ The sliders are adjusted to process this photo:
 
 Using this module allows you to quickly correct a photo that does not require too much processing. It is therefore particularly suitable for simple and fast processing, or to begin in RAW processing (as shown in this example). The main limitation of this module is that these different parameters usually occur (via the different modules offering them outside this one) at different levels of image processing, so they do not provide quite the same rendering.
 
-**=> It must not be used with the new RGB workflow offered by the trilogy: *filmic rgb*, *color balance* and *tone equalizer* to which is added according to needs: *rgb curve* and *rgb levels*.**
+**=> It must not be used with the new RGB workflow offered by the trilogy: *filmic rgb*, *color balance* and *tone equalizer* to which is added according to needs: *rgb cuSee you,
+
+Nilvus
+
+
+Le 17/12/2019 à 09:23, Maurizio Paglia a écrit :
+> Hi,
+> yes, I am here :-)
+> I will be glad to translate this article but I do not know if I will have enough time before Christmas :-(
+> Do you know when the article will be finished (i.e. no more in draft status?).
+>
+> Thanks,
+> Maurizio
+>
+> Il giorno mar 17 dic 2019 alle ore 08:03 Andreas Schneider <asn@cryptomilk.org> ha scritto:
+>
+>     On Monday, 16 December 2019 21:20:40 CET Nicolas Auffray wrote:
+>     > Hi all,
+>
+>     Hi Nicolas,
+>
+>     > As you know, each year Mathieu Moy write a detailled article about the
+>     > new release. This year, Mathieu doesn't have time to do it, so after
+>     > discussing it with him, I've replaced him. With help of french community
+>     > from darktable.fr forums, we have finished the french version (we begin
+>     > by that just because some people helping don't speak english). I've
+>     > beginning to translate this article in english and will finish it this
+>     > week (noise reduction part from rawfiner ; filmic and tone equalizer
+>     > from Aurélien Pierre).
+>     >
+>     > See WIP here (i will update it regularly):
+>     > https://github.com/Nilvus/dtorg/tree/master/content/blog/2019-12-24-darktabl
+>     > e-3.0
+>     >
+>     > Already translated parts are a first draft, some probably needs to be
+>     > improved.
+>     >
+>     > Feel free to translate it in your language if you want to. I know that
+>     > Maurizio Paglia translate the article in italian last year. Don't know
+>     > if it follows this mailing list.
+>
+>     thanks for working on this.
+>
+>     Just a suggestion for a tool to help with translations (if you don't know it
+>     yet):
+>
+>     https://www.deepl.com/translator
+>
+>
+>
+>
+>
+>             Andreas
+>
+>     -- 
+>     Andreas Schneider                 asn@cryptomilk.org
+>     GPG-ID:     8DFF53E18F2ABC8D8F3C92237EE0FC4DCC014E3D
+>
+>
+>     ___________________________________________________________________________
+>     darktable developer mailing list
+>     to unsubscribe send a mail to darktable-dev+unsubscribe@lists.darktable.org
+rve* and *rgb levels*.**
 
 ### New *raster mask*
 
